VuLeTanPhat-07-K5/local/logs/project.log
2025-05-12T02:21:51.197Z - normal: Load ~/.CocosCreator/settings.json
2025-05-12T02:21:51.278Z - normal: Initializing Asset Database
2025-05-12T02:21:51.287Z - normal: checking language setting...
2025-05-12T02:21:51.289Z - normal: Language: en
2025-05-12T02:21:52.308Z - success: preview server running at http://localhost:7456
2025-05-12T02:21:52.349Z - success: protocol editor-framework registered
2025-05-12T02:21:52.350Z - success: protocol app registered
2025-05-12T02:21:52.350Z - success: protocol theme registered
2025-05-12T02:21:52.351Z - success: protocol packages registered
2025-05-12T02:21:52.351Z - success: protocol uuid registerred
2025-05-12T02:21:52.351Z - success: protocol db registerred
2025-05-12T02:21:52.351Z - success: protocol thumbnail registerred
2025-05-12T02:21:52.352Z - success: protocol unpack registerred
2025-05-12T02:21:52.352Z - success: protocol disable-commonjs registerred
2025-05-12T02:21:53.403Z - normal: connected!
2025-05-12T02:21:53.420Z - normal: Check project /Users/cocos-1/VuLeTanPhat-07-K5/VuLeTanPhat-07-K5
2025-05-12T02:21:53.433Z - normal: Initializing project /Users/cocos-1/VuLeTanPhat-07-K5/VuLeTanPhat-07-K5
2025-05-12T02:21:53.978Z - normal: Initializing Cocos2d
2025-05-12T02:21:55.019Z - normal: Initializing engine extends
2025-05-12T02:21:55.128Z - success: alipay-adapter loaded
2025-05-12T02:21:55.146Z - success: asset-db-debugger loaded
2025-05-12T02:21:55.148Z - success: baidu-adapter loaded
2025-05-12T02:21:55.150Z - success: color-picker loaded
2025-05-12T02:21:55.328Z - success: fb-audience-network loaded
2025-05-12T02:21:55.387Z - success: fb-live-stream loaded
2025-05-12T02:21:55.390Z - success: google-play-instant loaded
2025-05-12T02:21:55.400Z - success: huawei-runtime loaded
2025-05-12T02:21:55.691Z - success: cpk-publish loaded
2025-05-12T02:21:55.692Z - success: jsb-adapter loaded
2025-05-12T02:21:55.699Z - success: oppo-runtime loaded
2025-05-12T02:21:55.709Z - success: package-manager loaded
2025-05-12T02:21:55.851Z - success: qqplay-adapter loaded
2025-05-12T02:21:55.853Z - success: runtime-dev-tools loaded
2025-05-12T02:21:55.860Z - success: sdkbox loaded
2025-05-12T02:21:55.865Z - success: tester loaded
2025-05-12T02:21:55.869Z - success: ui-kit-preview-extra loaded
2025-05-12T02:21:55.871Z - success: ui-kit-preview loaded
2025-05-12T02:21:55.875Z - success: ui-kit loaded
2025-05-12T02:21:55.881Z - success: vivo-runtime loaded
2025-05-12T02:21:55.881Z - success: weapp-adapter loaded
2025-05-12T02:21:55.882Z - success: xiaomi-adapter loaded
2025-05-12T02:21:55.886Z - success: alipay-minigame loaded
2025-05-12T02:21:55.911Z - success: assets loaded
2025-05-12T02:21:55.915Z - success: builder loaded
2025-05-12T02:21:56.298Z - success: cocos-services loaded
2025-05-12T02:21:56.313Z - success: console loaded
2025-05-12T02:21:56.364Z - success: fb-instant-games loaded
2025-05-12T02:21:56.376Z - success: game-window loaded
2025-05-12T02:21:56.378Z - success: google-instant-games loaded
2025-05-12T02:21:56.383Z - success: hierarchy loaded
2025-05-12T02:21:56.388Z - success: inspector loaded
2025-05-12T02:21:56.390Z - success: keystore loaded
2025-05-12T02:21:56.396Z - success: node-library loaded
2025-05-12T02:21:56.398Z - success: package-asset loaded
2025-05-12T02:21:56.399Z - success: preferences loaded
2025-05-12T02:21:56.401Z - success: project-exporter loaded
2025-05-12T02:21:56.407Z - success: project-importer loaded
2025-05-12T02:21:56.411Z - success: project-settings loaded
2025-05-12T02:21:56.417Z - success: scene loaded
2025-05-12T02:21:56.418Z - success: simulator-debugger loaded
2025-05-12T02:21:56.419Z - success: sprite-editor loaded
2025-05-12T02:21:56.427Z - success: store loaded
2025-05-12T02:21:56.437Z - success: timeline loaded
2025-05-12T02:21:56.445Z - success: xiaomi-runtime loaded
2025-05-12T02:22:01.292Z - info: Cocos Services load base data!
2025-05-12T02:22:04.041Z - warn: [db-task][init] Backup unused meta file: db://assets/resources/Background.meta
2025-05-12T02:22:20.549Z - normal: Loading packages
2025-05-12T02:22:20.560Z - normal: Watching packages
2025-05-12T02:22:20.706Z - normal: Run Application
2025-05-12T02:28:46.278Z - info: Only the prefab node "Item" and its child nodes are saved.
2025-05-12T02:33:06.421Z - info: Only the prefab node "Item" and its child nodes are saved.
2025-05-12T02:33:06.689Z - info: Only the prefab node "Item" and its child nodes are saved.
2025-05-12T02:35:27.659Z - failed: [db-task][sync-changes] Failed to import asset /Users/cocos-1/VuLeTanPhat-07-K5/VuLeTanPhat-07-K5/assets/Day4/scripts/Target.js, message: Compile error: SyntaxError: /Users/cocos-1/VuLeTanPhat-07-K5/VuLeTanPhat-07-K5/assets/Day4/scripts/Target.js: Unexpected token, expected , (44:49)
  42 |     console.log(this.node.parent.getComponent("GameBalloon"));
  43 |     console.log(this.node.parent.parent.getComponent("GameBalloon"));
> 44 |     console.log(this.node.parent.getChildByName();
     |                                                  ^
  45 |     console.log(this.node.parent.parent.children);
  46 |     this.node.parent.parent.children.forEach((child) => {
  47 |       if (child._name == "GameBalloon") {
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3564:12)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
2025-05-12T02:54:03.699Z - info: Only the prefab node "Item" and its child nodes are saved.
